--- a/changelog.html
+++ b/changelog.html
@@ -1,3 +1,30 @@
+<h2>0.95.2 - 2015-02-23</h2>
+
+<ul>
+<li>Fix: conditional classes for full-screen layouts</li>
+<li>New: Added many typography options</li>
+<li>Fix: Rename files according to WordPress coding standards</li>
+<li>New: Added dropdown menus capability</li>
+<li>New: Adding blog options</li>
+<li>Fix: Duplicate checkboxes on comments form</li>
+<li>Fix: Updating materialize to 0.95.2</li>
+<li>Fix: Use h1 headers for single posts</li>
+<li>Fix: On full-screen layouts comments were outside the container</li>
+<li>Fix: Remove z-depth from posts when the layout has sidebars</li>
+<li>Fix: Broken header on single posts (featured image)</li>
+<li>Fix: Comments inside a double-container when sidebar exists</li>
+<li>Fix: Styling improvements</li>
+<li>Fix: Per-Post layout control not working</li>
+<li>Fix: Featured images not properly resized</li>
+<li>Fix: Remove margin below the header</li>
+<li>Fix: Adding container to single content post when needed</li>
+<li>New: Add layer shadows to post archives</li>
+<li>Fix: Wrong sidebar positioning</li>
+<li>Fix: &lsquo;none&rsquo; can&rsquo;t be applied to color &amp; depth on widgets</li>
+<li>Fix: Improve the way layouts are handled</li>
+</ul>
+
+
 <h2>0.95.1 - CAUTION: requires Maera v1.1.0</h2>
 
 <ul>
