--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,17 @@
-<h2>0.95.2 - 2015-02-23</h2>
+<h2>0.95.3 - 2015-02-23 (5 hours)</h2>
+
+<ul>
+<li>Fix: Single post header</li>
+<li>Fix: Add script for collapsing navbar</li>
+<li>Fix: Remove the dev scripts, we no longer need them</li>
+<li>New: Per-Post-Type Layouts</li>
+<li>Fix: Set min-height for the comments textarea</li>
+<li>New: Add height control for the header</li>
+<li>Fix: Only add header parallax container if header exists</li>
+</ul>
+
+
+<h2>0.95.2 - 2015-02-23 (13 hours)</h2>
 
 <ul>
 <li>Fix: conditional classes for full-screen layouts</li>
